--- a/sources/website/templates/a.html
+++ b/sources/website/templates/a.html
@@ -25,13 +25,13 @@
         <li data-display="small-none">
             <a
                 data-anchor="navbar"
-                href="https://github.com/jacobxperez/atkinson-hyperlegible-pro/archive/refs/heads/release.zip"
+                href="https://github.com/ez-me/atkinson-hyperlegible-pro/releases/latest/download/AtkinsonHyperlegiblePro.TTF.zip"
                 >Download</a
             >
         </li>
 
         <li data-display="small-none">
-            <a data-anchor="navbar" href="https://github.com/jacobxperez/atkinson-hyperlegible-pro">
+            <a data-anchor="navbar" href="https://github.com/ez-me/atkinson-hyperlegible-pro">
                 Contribute</a
             >
         </li>
@@ -56,7 +56,7 @@
                 <li>
                     <a
                         data-anchor="navbar"
-                        href="https://github.com/jacobxperez/atkinson-hyperlegible-pro/archive/refs/heads/release.zip"
+                        href="https://github.com/ez-me/atkinson-hyperlegible-pro/releases/latest/download/AtkinsonHyperlegiblePro.TTF.zip"
                         >Download Font</a
                     >
                 </li>
@@ -68,7 +68,7 @@
                 <li>
                     <a
                         data-anchor="navbar"
-                        href="https://github.com/jacobxperez/atkinson-hyperlegible-pro"
+                        href="https://github.com/ez-me/atkinson-hyperlegible-pro"
                         >Contribute</a
                     >
                 </li>
@@ -88,7 +88,7 @@
         <br />
         What are you waiting for
         <a
-            href="https://github.com/jacobxperez/atkinson-hyperlegible-pro/archive/refs/heads/release.zip"
+            href="https://github.com/ez-me/atkinson-hyperlegible-pro/releases/latest/download/AtkinsonHyperlegiblePro.TTF.zip"
             >download</a
         >
         this font and change the world.
