--- a/sources/website/css/custom/atkinson-hyperlegible-pro.css
+++ b/sources/website/css/custom/atkinson-hyperlegible-pro.css
@@ -2,7 +2,7 @@
     font-family: "Atkinson Hyperlegible Pro";
     src:
         local("Atkinson Hyperlegible Pro"),
-        url("/fonts/web/AtkinsonHyperPro-Regular.woff2")
+        url("https://github.com/ez-me/atkinson-hyperlegible-pro/raw/main/fonts/web/AtkinsonHyperPro-Regular.woff2")
             format("woff2");
     font-weight: 400;
     font-style: normal;
@@ -12,7 +12,7 @@
     font-family: "Atkinson Hyperlegible Pro";
     src:
         local("Atkinson Hyperlegible Pro"),
-        url("/fonts/web/AtkinsonHyperPro-Italic.woff2")
+        url("https://github.com/ez-me/atkinson-hyperlegible-pro/raw/main/fonts/web/AtkinsonHyperPro-Italic.woff2")
             format("woff2");
     font-weight: 400;
     font-style: italic;
@@ -22,7 +22,7 @@
     font-family: "Atkinson Hyperlegible Pro";
     src:
         local("Atkinson Hyperlegible Pro"),
-        url("/fonts/web/AtkinsonHyperPro-Bold.woff2")
+        url("https://github.com/ez-me/atkinson-hyperlegible-pro/raw/main/fonts/web/AtkinsonHyperPro-Bold.woff2")
             format("woff2");
     font-weight: 700;
     font-style: normal;
@@ -32,7 +32,7 @@
     font-family: "Atkinson Hyperlegible Pro";
     src:
         local("Atkinson Hyperlegible Pro"),
-        url("/fonts/web/AtkinsonHyperPro-BoldItalic.woff2")
+        url("https://github.com/ez-me/atkinson-hyperlegible-pro/raw/main/fonts/web/AtkinsonHyperPro-BoldItalic.woff2")
             format("woff2");
     font-weight: 700;
     font-style: italic;
